[gd_scene load_steps=21 format=3 uid="uid://c613om832wxoa"]

[ext_resource type="Script" path="res://Scenes/Symbols/Symbol_manager.gd" id="1_kgg8t"]
[ext_resource type="Texture2D" uid="uid://dpw11vwgj3tns" path="res://Sprites/UI/Symbol_Background.png" id="2_rg6a3"]
[ext_resource type="Texture2D" uid="uid://by5vtaow2njqc" path="res://Sprites/UI/Character_Stat_Background.png" id="3_qs4qy"]
[ext_resource type="Texture2D" uid="uid://byvbf8lae0pxl" path="res://Sprites/UI/Character_graphic_background.png" id="4_o5114"]
[ext_resource type="Script" path="res://Scenes/Timers.gd" id="6_jybau"]
[ext_resource type="PackedScene" uid="uid://dm886n4fygh66" path="res://Scenes/Characters/player.tscn" id="6_xhbep"]
[ext_resource type="PackedScene" uid="uid://dkuih8v60l230" path="res://Scenes/Characters/villain_parent.tscn" id="7_j38ax"]
[ext_resource type="Script" path="res://Scenes/Turn_Timer.gd" id="8_u7unc"]
[ext_resource type="PackedScene" uid="uid://du1f6yickomfp" path="res://Scenes/canvas_layer.tscn" id="9_npqyu"]
[ext_resource type="PackedScene" uid="uid://0y7eb3miu478" path="res://Scenes/power_block.tscn" id="10_br8mh"]
[ext_resource type="PackedScene" uid="uid://bvw5trm5by4kj" path="res://Scenes/power_brawl.tscn" id="11_mjch4"]
[ext_resource type="PackedScene" uid="uid://7w26hdp67v7o" path="res://Scenes/power_chain_lightning.tscn" id="12_cg1qw"]
[ext_resource type="PackedScene" uid="uid://ssulfiwung2b" path="res://Scenes/power_energize.tscn" id="13_mp4mw"]
[ext_resource type="PackedScene" uid="uid://bxwlhou7vq1rh" path="res://Scenes/power_shock.tscn" id="14_t1s75"]
[ext_resource type="PackedScene" uid="uid://b8vrlp4v6d34e" path="res://Scenes/power_static_shield.tscn" id="15_tdffc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_orfkl"]
size = Vector2(2.19231, 8.42307)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cj30m"]
bg_color = Color(0.321569, 0, 0.0862745, 1)
shadow_color = Color(0, 0, 0, 0.14902)
shadow_size = 1
shadow_offset = Vector2(0, 0.1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q03k6"]
bg_color = Color(0.701961, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vgycg"]
bg_color = Color(0.45098, 0.376471, 0.0392157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k8wat"]
bg_color = Color(1, 0.803922, 0.160784, 1)

[node name="Fight_scene" type="Node2D" node_paths=PackedStringArray("super_power_count_label")]
script = ExtResource("1_kgg8t")
super_power_count_label = NodePath("Energy_bar/Super_power_count_label")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="SymbolBackground" type="Sprite2D" parent="."]
position = Vector2(164, 90)
texture = ExtResource("2_rg6a3")

[node name="CharacterStatBackground" type="Sprite2D" parent="."]
position = Vector2(29, 119)
texture = ExtResource("3_qs4qy")

[node name="CharacterStatBackground2" type="Sprite2D" parent="."]
position = Vector2(299, 119)
texture = ExtResource("3_qs4qy")

[node name="CharacterGraphicBackground" type="Sprite2D" parent="."]
position = Vector2(29, 30)
texture = ExtResource("4_o5114")

[node name="CharacterGraphicBackground" type="Sprite2D" parent="CharacterGraphicBackground"]
position = Vector2(270, 0)
texture = ExtResource("4_o5114")

[node name="Area2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(28.5, 69.5)
scale = Vector2(26, 26)
shape = SubResource("RectangleShape2D_orfkl")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(299, 69)
scale = Vector2(26, 26)
shape = SubResource("RectangleShape2D_orfkl")

[node name="Symbol_Timers" type="Node" parent="."]
script = ExtResource("6_jybau")

[node name="Timer" type="Timer" parent="Symbol_Timers"]
wait_time = 0.41

[node name="Pre-turn" type="Timer" parent="Symbol_Timers"]
wait_time = 3.0
one_shot = true

[node name="Player_label" type="Label" parent="."]
offset_left = -1.0
offset_top = 64.0
offset_right = 57.0
offset_bottom = 87.0
theme_override_font_sizes/font_size = 10
text = "OVERLOAD"
horizontal_alignment = 1

[node name="Player" parent="." node_paths=PackedStringArray("energy_progress_bar", "hp_label", "hp_progress_bar_max", "hp_progress_bar_current", "block_label") instance=ExtResource("6_xhbep")]
position = Vector2(26, 48)
rotation = 1.83259
scale = Vector2(0.05, 0.05)
energy_progress_bar = NodePath("../Energy_bar")
hp_label = NodePath("../Player_health_block/ProgressBar/hp_player_label")
hp_progress_bar_max = NodePath("../Player_health_block/ProgressBar")
hp_progress_bar_current = NodePath("../Player_health_block/ProgressBar")
block_label = NodePath("../Player_health_block/Panel2/block_player_label")

[node name="Villain_label" type="Label" parent="."]
offset_left = 270.0
offset_top = 62.0
offset_right = 328.0
offset_bottom = 85.0
theme_override_font_sizes/font_size = 10
text = "OVERLOAD"
horizontal_alignment = 1

[node name="Villain_Parent" parent="." node_paths=PackedStringArray("intention_label", "intention_value_label", "villain_label", "hp_label", "hp_progress_bar_max", "hp_progress_bar_current", "block_label") instance=ExtResource("7_j38ax")]
position = Vector2(303, 47)
scale = Vector2(0.05, 0.05)
intention_label = NodePath("Intention_label")
intention_value_label = NodePath("Intention_label/Value")
villain_label = NodePath("../Villain_label")
hp_label = NodePath("../Villain_health_block/ProgressBar/hp_villain_label")
hp_progress_bar_max = NodePath("../Villain_health_block/ProgressBar")
hp_progress_bar_current = NodePath("../Villain_health_block/ProgressBar")
block_label = NodePath("../Villain_health_block/Panel2/block_villain_label")

[node name="Intention_label" type="Label" parent="Villain_Parent"]
anchors_preset = 10
anchor_right = 1.0
offset_left = -0.5
offset_top = -15.0
offset_right = 0.5
offset_bottom = -3.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1

[node name="Value" type="Label" parent="Villain_Parent/Intention_label"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -0.5
offset_top = -15.0
offset_right = 0.5
offset_bottom = -3.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1

[node name="Turn_Timer" type="Timer" parent="." node_paths=PackedStringArray("timer_progress", "timer_label")]
wait_time = 10.0
one_shot = true
script = ExtResource("8_u7unc")
timer_progress = NodePath("../Timer_bar")
timer_label = NodePath("../Timer_bar/Timer_label")

[node name="Villain_health_block" type="HBoxContainer" parent="."]
layout_direction = 2
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 270.0
offset_right = 328.0
offset_bottom = 14.0
grow_horizontal = 0
size_flags_horizontal = 3
theme_override_constants/separation = 0
alignment = 2

[node name="Panel2" type="Panel" parent="Villain_health_block"]
custom_minimum_size = Vector2(14, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="Villain_health_block/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.262745, 0.52549, 0.94902, 1)

[node name="block_villain_label" type="Label" parent="Villain_health_block/Panel2"]
layout_mode = 0
offset_right = 14.0
offset_bottom = 14.0
theme_override_font_sizes/font_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="Villain_health_block"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 4.0
theme_override_font_sizes/font_size = 10
theme_override_styles/background = SubResource("StyleBoxFlat_cj30m")
theme_override_styles/fill = SubResource("StyleBoxFlat_q03k6")
max_value = 50.0
step = 0.1
value = 50.0
fill_mode = 1
show_percentage = false

[node name="hp_villain_label" type="Label" parent="Villain_health_block/ProgressBar"]
layout_mode = 0
offset_right = 44.0
offset_bottom = 14.0
theme_override_font_sizes/font_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player_health_block" type="HBoxContainer" parent="."]
layout_direction = 2
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 58.0
offset_bottom = 14.0
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0
alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="Player_health_block"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 4.0
theme_override_font_sizes/font_size = 10
theme_override_styles/background = SubResource("StyleBoxFlat_cj30m")
theme_override_styles/fill = SubResource("StyleBoxFlat_q03k6")
max_value = 50.0
step = 0.1
value = 50.0
show_percentage = false

[node name="hp_player_label" type="Label" parent="Player_health_block/ProgressBar"]
layout_mode = 0
offset_right = 44.0
offset_bottom = 14.0
theme_override_font_sizes/font_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="Player_health_block"]
custom_minimum_size = Vector2(14, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="Player_health_block/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.262745, 0.52549, 0.94902, 1)

[node name="block_player_label" type="Label" parent="Player_health_block/Panel2"]
layout_mode = 0
offset_right = 14.0
offset_bottom = 14.0
theme_override_font_sizes/font_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer_bar" type="ProgressBar" parent="."]
offset_left = 270.0
offset_top = 100.0
offset_right = 311.0
offset_bottom = 179.0
theme_override_styles/background = SubResource("StyleBoxFlat_vgycg")
theme_override_styles/fill = SubResource("StyleBoxFlat_k8wat")
value = 100.0
fill_mode = 3
show_percentage = false

[node name="Timer_label" type="Label" parent="Timer_bar"]
layout_mode = 0
offset_top = -12.0
offset_right = 40.0
offset_bottom = 11.0
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1

[node name="Energy_bar" type="ProgressBar" parent="."]
offset_left = 13.0
offset_top = 172.0
offset_right = 42.0
offset_bottom = 180.0
theme_override_styles/background = SubResource("StyleBoxFlat_vgycg")
theme_override_styles/fill = SubResource("StyleBoxFlat_k8wat")
show_percentage = false
metadata/_edit_group_ = true

[node name="Super_power_count_label" type="Label" parent="Energy_bar"]
layout_mode = 0
offset_left = 1.0
offset_top = -8.0
offset_right = 41.0
offset_bottom = 15.0

[node name="Speed_demon_timer" type="Timer" parent="."]
wait_time = 3.935
one_shot = true
autostart = true

[node name="CanvasLayer" parent="." instance=ExtResource("9_npqyu")]

[node name="Power_chain_lightning" parent="." instance=ExtResource("12_cg1qw")]
position = Vector2(28, 164)
scale = Vector2(0.75, 0.75)

[node name="Power_static_shield" parent="." instance=ExtResource("15_tdffc")]
position = Vector2(28, 134)
scale = Vector2(0.75, 0.75)

[node name="Power_shock" parent="." instance=ExtResource("14_t1s75")]
position = Vector2(28, 119)
scale = Vector2(0.75, 0.75)

[node name="Power_energize" parent="." instance=ExtResource("13_mp4mw")]
position = Vector2(28, 149)
scale = Vector2(0.75, 0.75)

[node name="Power_block" parent="." instance=ExtResource("10_br8mh")]
position = Vector2(28, 104)
scale = Vector2(0.75, 0.75)

[node name="power_brawl" parent="." instance=ExtResource("11_mjch4")]
position = Vector2(28, 89)
scale = Vector2(0.75, 0.75)

[connection signal="timeout" from="Symbol_Timers/Timer" to="." method="_spawn"]
[connection signal="timeout" from="Symbol_Timers/Pre-turn" to="." method="_turn_timer_start"]
[connection signal="timeout" from="Turn_Timer" to="." method="_turn_end"]
[connection signal="timeout" from="Speed_demon_timer" to="." method="_speed_demon_disable"]
